@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed optimized route segment escaping.  #9562 [wildchild, Jeremy Kemper]
+
 * root_path returns '/' not ''.  #9563 [lifofifo]
 
 * Fixed that setting request.format should also affect respond_to blocks [DHH]
